--- a/miml.ipynb
+++ b/miml.ipynb
@@ -26,7 +26,9 @@
     "from keras.optimizers import SGD\n",
     "from keras.callbacks import ModelCheckpoint\n",
     "from sklearn.metrics import matthews_corrcoef\n",
-    "from sklearn.metrics import hamming_loss"
+    "from sklearn.metrics import hamming_loss\n"
+    "from keras import backend as K\n"
+    "K.set_image_dim_ordering('th')"
    ]
   },
   {
@@ -64,16 +66,16 @@
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(Convolution2D(32, 3, 3, border_mode='same',input_shape=(3 , 100, 100)))\n",
+    "model.add(Convolution2D(32, kernel_size=(3, 3),padding=\"same\",input_shape=(3 , 100, 100)))\n",
     "model.add(Activation('relu'))\n",
-    "model.add(Convolution2D(32, 3, 3))\n",
+    "model.add(Convolution2D(32, (3, 3)))\n",
     "model.add(Activation('relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Convolution2D(64, 3, 3, border_mode='same'))\n",
+    "model.add(Convolution2D(64,(3, 3), padding=\"same\"))\n",
     "model.add(Activation('relu'))\n",
-    "model.add(Convolution2D(64, 3, 3))\n",
+    "model.add(Convolution2D(64, (3, 3)))\n",
     "model.add(Activation('relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Dropout(0.25))\n",
