--- a/miml.ipynb
+++ b/miml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -26,9 +26,9 @@
     "from keras.optimizers import SGD\n",
     "from keras.callbacks import ModelCheckpoint\n",
     "from sklearn.metrics import matthews_corrcoef\n",
-    "from sklearn.metrics import hamming_loss\n"
-    "from keras import backend as K\n"
-    "K.set_image_dim_ordering('th')\n"
+    "from sklearn.metrics import hamming_loss\n",
+    "from keras import backend as K\n",
+    "K.set_image_dim_ordering('th')"
    ]
   },
   {
